vscode-blueberry-tonic-theme-0.1.2 (2018-08-12)

  * Improved selection and highlight colors
  * Improved constant colors

vscode-blueberry-tonic-theme-0.1.1 (2018-08-12)

  * Added marketplace icon

vscode-blueberry-tonic-theme-0.1.0 (2018-08-12)

  * Initial release