@@ -20,7 +20,7 @@ A Theme for Visual Studio Code
 
 **MIT License**
 
-Copyright (c) 2016-2018 Martin Donath
+Copyright (c) 2018 Martin Donath
 
 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to
