@@ -1,7 +1,11 @@
+vscode-blueberry-tonic-theme-0.x.x (2018-xx-xx)
+
+  * Added distinct colors for object members (JS, TS)
+
 vscode-blueberry-tonic-theme-0.1.2 (2018-08-12)
 
   * Improved selection and highlight colors
-  * Improved constant colors
+  * Improved constant colors (JS, TS)
 
 vscode-blueberry-tonic-theme-0.1.1 (2018-08-12)
 
